Fix the link to my website in the footer.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <li><a class="footer-link" target="_blank" href="https://www.yg.is">Hire Me</a></li>
             <li><a class="footer-link" target="_blank" href="https://github.com/ygev/cluse">Documentation</a></li>
           </ul>
-          <p class="footer-copyright">© Yana Gevorgyan · <a class="footer-link" href="yg.is">yg.is</a></p> 
+          <p class="footer-copyright">© Yana Gevorgyan · <a class="footer-link" href="https://www.yg.is">yg.is</a></p> 
         </footer>
         <script
         src="https://code.jquery.com/jquery-3.4.1.js"
