Add macOS Mojave instead of numbers.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <button aria-label="See Github Repository" onclick="window.open('https://github.com/ygev/cluse','_blank')" class="btn-git" aria-label="github button"></button>
           </div>
-        <p id="underbtn" class="underbtn"><span class="mac-logo">  </span>macOS 10.11 or above • Sketch 40 or above required
+        <p id="underbtn" class="underbtn"><span class="mac-logo">  </span>macOS Mojave or above • Sketch 40 or above required
         </p>
       </article>
       <aside  class="rater">
