Update links to my website.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a class="nav-item" href="#section1">Features</a>
       <a class="nav-item" href="#section2">Mission</a>
       <a class="nav-item" href="#section3">Support</a>
-      <a class="nav-item" target="_blank" href="https://github.com/ygev/cluse">Documentation</a>
+      <a class="nav-item" target="_blank" href="https://yg.is/cluse">Documentation</a>
     </nav>
     <div class="logopack">
           <img src="img/logo.svg" alt="" class="logo">
@@ -35,7 +35,7 @@
           <a href="#section1">Features</a>
           <a href="#section2">Mission</a>
           <a href="#section3">Support</a>
-          <a target="_blank" href="https://github.com/ygev/cluse">Documentation</a>
+          <a target="_blank" href="https://yg.is/cluse">Documentation</a>
         </div>
       </nav>
   <header id="big" class="hero">
@@ -142,9 +142,9 @@
             <h3 class="head">Why Choose Cluse?</h3>
           <h4 class="subhead u-txt-l">The path to accessibility begins in the designer’s Sketch file. Cluse aims to develop inclusive design habits for the average Sketch user. However, there is no optimal way to incorporate them all into the workflow. From my interviews with interns and full-time designers, the most common manner for verifying WCAG color contrast compliance is manually pasting in HEX codes to online tools. Thus, the idea for Cluse was born.
           </h4>  
-          <!-- <div class="link-wrapper">
-            <a href="" class="link"> Read About Cluse’s Conception <span class="u-blue link-arrow">→</span></a>
-          </div> -->
+          <div class="link-wrapper">
+            <a href="https://yg.is/cluse" class="link"> Read About Cluse’s Conception <span class="u-blue link-arrow">→</span></a>
+          </div>
         </div>
         </article>
         <article id="section3" data-aos="fade-up" data-aos-easing="ease-in-sine"  class="issue">
@@ -158,7 +158,7 @@
         <footer data-aos="fade-up" data-aos-easing="ease-in-sine">
           <ul class="footer-links">
             <li><a class="footer-link" target="_blank" href="https://www.yg.is">Hire Me</a></li>
-            <li><a class="footer-link" target="_blank" href="https://github.com/ygev/cluse">Documentation</a></li>
+            <li><a class="footer-link" target="_blank" href="https://yg.is/cluse">Documentation</a></li>
           </ul>
           <p class="footer-copyright">© Yana Gevorgyan · <a class="footer-link" href="https://www.yg.is">yg.is</a></p> 
         </footer>
